--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
                 <div class="home-btn-group">
                     <button class="home-login button"
                         onclick="location.href='https://c00l1n.github.io/login/'">Login</button>
-                    <button class="home-register button">Register</button>
+                    <button class="home-register button" onclick="location.href='https://c00l1n.github.io/GearTechCafeRegister/'">Register</button>
                 </div>
                 <div data-role="BurgerMenu" class="home-burger-menu">
                     <svg viewBox="0 0 1024 1024" class="home-icon">
