--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
                 </div>
                 <div class="home-btn-group">
                     <button class="home-login button"
-                        onclick="location.href='https://c00l1n.github.io/login/'">Login</button>
+                        onclick="location.href='https://c00l1n.github.io/GearTechCafeLogin/'">Login</button>
                     <button class="home-register button" onclick="location.href='https://c00l1n.github.io/GearTechCafeRegister/'">Register</button>
                 </div>
                 <div data-role="BurgerMenu" class="home-burger-menu">
